✨ create and read rules
