# src/static/swagger.json
@@ -22,6 +22,36 @@
                 }
             }
         },
+        "/engine/api/v1/rules": {
+            "post": {
+                "tags": [
+                    "rules"
+                ],
+                "description": "Create a new rule.",
+                "consumes": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "Rule Data",
+                        "in": "body",
+                        "description": "Rule definition.",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/NewRule"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Rule Created"
+                    },
+                    "409": {
+                        "description": "Rule already exists"
+                    }
+                }
+            }
+        },
         "/engine/api/v1/workflows": {
             "post": {
                 "tags": [
@@ -57,6 +87,26 @@
         }
     },
     "definitions": {
+        "NewRule": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "description": "Rule name.",
+                    "type": "string",
+                    "minLength": 5,
+                    "maxLength": 50,
+                    "required": true,
+                    "example": "ru.account.products"
+                },
+                "expression": {
+                    "description": "Expression.",
+                    "type": "string",
+                    "minLength": 5,
+                    "maxLength": 2000,
+                    "required": true
+                }
+            }
+        },
         "NewWorkflow": {
             "type": "object",
             "properties": {
