# src/webapi/models/rule.py
@@ -1,0 +1,11 @@
+""" _module_ """
+import json
+
+
+class RuleModel:
+    """ Rule Model """
+
+    def __init__(self, name, expression, is_exclusive):
+        self.name = name
+        self.expression = expression
+        self.is_exclusive = is_exclusive
